--- a/review/style_slide.css
+++ b/review/style_slide.css
@@ -1,31 +1,72 @@
 
+.image_slider {
+    position: relative;
+    overflow: hidden;
+}
+
 .image_slider>ul, .image_slider>li {
     list-style-type: none;
     margin: 0px;
     padding: 0px;
 }
-#pos1 {
-    position: absolute;
+.image_slider ul {
+    width: 500%;
+    height: 100%;
 }
 .image_slider li {
-    width: 100%;
+    width: 20%;
     height: 100%;
     float: left;
+}
+.image_slider input {
+    display: none;
+}
+.image_slider p {
+    text-align: center;
+    vertical-align: middle;
+    margin-right: 90px;
+}
+.image_slider>p>label {
+    position: absolute;
+    display: inline-block;
+    bottom: 10px;
+    width: 10px;
+    height: 10px;
+    border-radius: 50%;
+    border: 2px solid white;
+    background-color: white;
+    cursor: pointer;
+}
+.image_slider>p>label:nth-child(1) {
+    
+}
+.image_slider>p>label:nth-child(2) {
+    margin-left: 20px;
+}
+.image_slider>p>label:nth-child(3) {
+    margin-left: 40px;
+}
+.image_slider>p>label:nth-child(4) {
+    margin-left: 60px;
 }
 
 .image_slider li:nth-child(1) {
     background: url('images/americano.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .image_slider li:nth-child(2) {
     background: url('images/grapefruit.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .image_slider li:nth-child(3) {
     background: url('images/karamel.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
 }
 .image_slider li:nth-child(4) {
     background: url('images/latte.jpg');
+    background-repeat: no-repeat;
     background-size: cover;
 }
